--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>GARUGA</title>
 </head>
 <body background="">
-	<h1 align="center"><font face="Comic Sans MS" color="white"><b>Hola soy Garuga:D</b></font></h1>
+	<h1>Hola soy Garuga:D</h1>
 </body>
 </html>
