--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
 	<title>GARUGA</title>
 </head>
 <body background="">
-	<h1 align="center"><font face="Comic Sans MS" color="white"><b>Error</b></font></h1>
+	<h1>Error</h1>
 </body>
 </html>
