--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>GARUGA</title>
 </head>
 <body background="">
-	<h1>Hola soy Garuga:D</h1>
+	<h1 align="center">Hola soy Garuga:D</h1>
+	<img src="logo.png" align="center" width="500" height="500">
 </body>
 </html>
