--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body background="">
 	<h1 align="center">Hola soy Garuga:D</h1>
-	<img src="logo.png" align="center" width="500" height="500">
+	<table align="center">
+		<tr>
+			<td>
+				<img src="logo.png" width="500" height="500">
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
