--- a/index.html
+++ b/index.html
@@ -2,15 +2,53 @@
 <html> 
 <head>
 	<title>GARUGA</title>
+	<link href="up.png" type="" rel="">
 </head>
-<body background="">
-	<h1 align="center">Hola soy Garuga:D</h1>
+<body background="Fondo.jpg">
 	<table align="center">
 		<tr>
 			<td>
-				<img src="logo.png" width="500" height="500">
+				<img src="LogoL.png" width="75" height="75">
+			</td>
+			<td>
+				<font size="6" color="white" face="courier"><b>Blog De Garuga</b></font>
+			</td>
+			<td>
+				<img src="LogoR.png" width="75" height="75">
 			</td>
 		</tr>
 	</table>
+<br>
+<br>
+<br>
+<br>
+<br>
+	<table align="center">
+		<tr>
+			<td>
+				<font size="5" color="white" face="courier"><b>Hola soy Yian Garuga, me pueden llamar Garuga.<br> Soy un Wyvern Pájaro un poco parecido mi pariente<br>el Yian Kut-Ku introducido en la epoca de el Monster<br>Hunter Freedom.</b></font>
+			</td>
+		</tr>
+		</table>
+<br>
+<br>
+<br>
+<br>
+<br>
+	<table align="center">
+		<tr>
+			<td align="center">
+				<font size="6" color="white" face="courier"><b>Esperen unos cazadores vinieron a visitarme...<br>Si no vuelvo sabran que paso...</b></font>
+			</td>
+		</tr>
+	</table>
+<br>
+<br>
+<br>
+<br>
+<br>
+	<footer>
+		<sub><p align="center"><font color="white"><b>© 2022 garu.ga</b></font></p></sub>
+	</footer>
 </body>
 </html>
